force-app/main/default/objects/Tenant__c/Tenant__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Tenant and resident management for luxury properties</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Tenant</label><nameField><label>Full Name</label><type>Text</type></nameField><pluralLabel>Tenants</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>