force-app/main/default/objects/Tenant__c/fields/Current_Unit__c.field-meta.xml
<CustomField><fullName>Current_Unit__c</fullName><description>Current unit where tenant resides</description><externalId>false</externalId><label>Current Unit</label><referenceTo>Unit__c</referenceTo><relationshipLabel>Tenants</relationshipLabel><relationshipName>Tenants</relationshipName><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Lookup</type></CustomField>