force-app/main/default/objects/Tenant__c/fields/Email__c.field-meta.xml
<CustomField><fullName>Email__c</fullName><description>Primary email address</description><externalId>false</externalId><label>Email</label><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Email</type><unique>false</unique></CustomField>