force-app/main/default/objects/Tenant__c/fields/First_Name__c.field-meta.xml
<CustomField><fullName>First_Name__c</fullName><description>Tenant first name</description><externalId>false</externalId><label>First Name</label><length>50</length><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Text</type><unique>false</unique></CustomField>