force-app/main/default/objects/Tenant__c/fields/Last_Name__c.field-meta.xml
<CustomField><fullName>Last_Name__c</fullName><description>Tenant last name</description><externalId>false</externalId><label>Last Name</label><length>50</length><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Text</type><unique>false</unique></CustomField>