force-app/main/default/objects/Tenant__c/fields/Move_In_Date__c.field-meta.xml
<CustomField><fullName>Move_In_Date__c</fullName><description>Date tenant moved into unit</description><externalId>false</externalId><label>Move In Date</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Date</type></CustomField>