force-app/main/default/objects/Tenant__c/fields/Phone__c.field-meta.xml
<CustomField><fullName>Phone__c</fullName><description>Primary phone number</description><externalId>false</externalId><label>Phone</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Phone</type></CustomField>