force-app/main/default/objects/Tenant__c/fields/Tenant_Status__c.field-meta.xml
<CustomField><fullName>Tenant_Status__c</fullName><description>Current status of tenant</description><externalId>false</externalId><label>Tenant Status</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Prospect</fullName><default>false</default><label>Prospect</label></value><value><fullName>Application Submitted</fullName><default>false</default><label>Application Submitted</label></value><value><fullName>Background Check</fullName><default>false</default><label>Background Check</label></value><value><fullName>Approved</fullName><default>false</default><label>Approved</label></value><value><fullName>Active</fullName><default>true</default><label>Active</label></value><value><fullName>Notice Given</fullName><default>false</default><label>Notice Given</label></value><value><fullName>Moved Out</fullName><default>false</default><label>Moved Out</label></value></valueSetDefinition></valueSet></CustomField>